initial conversion from scala 2 to scala 3 compiles and tests for Key pass

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
+
+#scala
 *.class
+*.jar
+*.tasty
 *.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Mac
+.DS_Store
+
+# sbt
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+project/target/
+project/project/
+logs/
+project/.sbtserver
+.sbtserver/
+.bloop/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+metals.*
